fix text truncate in layer lists

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -177,3 +177,11 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
   }
 }
+
+// truncate text
+.truncate {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
